<resources>
    <string name="app_name">ExplorO</string>
    <string name="log_in">Log in</string>
    <string name="register_redirect"><u>New User? Create Account</u></string>
    <string name="cancel_registration"><u>Already A User? Log In</u></string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="bicycle_image">Bicycle image</string>
    <string name="logo">Logo</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="pre_planned_routes">Pre-planned routes</string>
    <string name="create_route">Create my own route</string>
    <string name="locations_fragment_title">Top Locations</string>
    <string name="view_all">View all</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <!-- Strings related to route -->
    <string name="add_destination">Add new destination</string>
    <string name="start_route">Start route</string>
    <string name="close_route">Cancel route</string>

    <string name="close_place_info_text">Close info window</string>

</resources>