...
        app:layout_constraintBottom_toTopOf="@+id/usernameInputField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bicycle" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginBottom="137dp"
        android:backgroundTint="@color/white_shade_1"
        android:elevation="10dp"
        android:insetTop="0dp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#00D18585"
        android:insetTop="0dp"
        android:insetBottom="0dp"
...
