...
        android:textColorHint="@color/text_red_half_transparent"
        app:layout_constraintBottom_toTopOf="@+id/emailnputField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelRegistrationBtn"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#00D18585"
        android:insetTop="0dp"
        android:insetBottom="0dp"
...
        android:text="@string/cancel_registration"
        android:textColor="@color/text_white"
        android:textSize="12sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/registerPasswordInputField"
        android:layout_width="320dp"
        android:layout_height="50dp"
...
