...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_shade_2"
    tools:context=".controllers.MainActivityController">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainer"
        android:name="com.example.exploro.controllers.LoginFragmentController"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
